--- a/en/trans/lyLeserichtung.dita
+++ b/en/trans/lyLeserichtung.dita
@@ -23,7 +23,7 @@
             counterclockwise fonts) and from top to bottom, taking column divisions into account. </p>
         <p>Elements which are situated outside the print space (e.g. marginalia or catch words) are
             alyways considered to be read after the print space.</p>
-        <example><title>ReadingOrder in PAGE XML</title><codeblock>&lt;ReadingOrder>
+        <example><title>ReadingOrder in PAGE XML</title><codeblock outputclass="language-xml">&lt;ReadingOrder>
             &lt;OrderedGroup id="ro_1542194237187" caption="Regions reading order">
             &lt;RegionRefIndexed index="0" regionRef="r_1"/>
             &lt;RegionRefIndexed index="1" regionRef="r_2"/>
