correction ligatur tz mufi to unicode, sync. with trLigaturen2.dita

--- a/de/trans/ocr_d_koordinationsgremium_codierung.dita
+++ b/de/trans/ocr_d_koordinationsgremium_codierung.dita
@@ -1645,11 +1645,11 @@ id="image_o5k_2gz_s1b"/></entry>
 </row>
 <row>
 <entry><image href="images/EEDC.png" id="image_sxx_1w1_t1b"/></entry>
-<entry> </entry>
-<entry>EEDC </entry>
-<entry>61148 </entry>
-<entry>Latin small ligature tz </entry>
-<entry>MUFI </entry>
+<entry>ꜩ </entry>
+<entry>A729 </entry>
+<entry>42793 </entry>
+<entry>Latin small letter (ligature) tz </entry>
+<entry>Unicode </entry>
 <entry>t </entry>
 <entry/>
 </row>
