--- a/de/trans/trFremdsprache.dita
+++ b/de/trans/trFremdsprache.dita
@@ -48,7 +48,7 @@
                         <entry>nata</entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0030.png" height="40" width="20"
                                 id="image_avr_5fm_gz"/><image href="images/font_0094.png"
                                 height="40" width="20" id="image_bvr_5fm_gz"/><image
@@ -69,7 +69,7 @@
                                 dem Vokal eine Verkürzung einer Doppelung des Vokals darstellt. Bei
                                 einem anderen Kontext kann die Schreibweise aus Level 2 angewendet
                                 werden.</p>
-                            <p id="Tilde_Makron">Eine Unterscheidung zwischen einem Balken oder
+                            <p id="Tilde_Makron" importance="high" >Eine Unterscheidung zwischen einem Balken oder
                                 geschlängelter Linie über Buchstaben als Substituenten für
                                 ausgelassene Zeichen, Nasalstrich [Kürzungsstrich] ist in vielen
                                 Fällen nicht möglich. Aus diesem Grund wird empfohlen eine mögliche
@@ -77,7 +77,7 @@
                                 Metadaten zum Ground Truth zu dokumentieren.</p>
                         </entry>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0104.png" height="34" width="41"
                                 id="image_fvr_5fm_gz"/></entry>
                         <entry>e</entry>
@@ -106,7 +106,7 @@
                                 <text>hex: &amp;#x017F;</text></term></entry>
                         <entry/>
                     </row>
-                    <row product="product1">
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0131.png" height="35" width="20"
                                 id="image_ivr_5fm_gz"/><image href="images/font_0027.png"
                                 height="46" width="21" id="image_jvr_5fm_gz"/><image
@@ -253,7 +253,7 @@
                                 href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
                                 Makron</xref></entry>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0043.png" height="54" width="26"
                                 id="image_gwr_5fm_gz"/><image href="images/font_0139.png"
                                 height="56" width="29" id="image_hwr_5fm_gz"/><image
@@ -272,7 +272,7 @@
                                 <text>hex: &amp;#x1D71</text></term></entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0134.png" height="45" width="36"
                                 id="image_kwr_5fm_gz"/><image href="images/font_0073.png"
                                 height="30" width="27" id="image_lwr_5fm_gz"/><image
@@ -286,7 +286,7 @@
                                 <text>hex: &amp;#xA753;</text></term></entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0124.png" height="57" width="31"
                                 id="image_nwr_5fm_gz"/><image href="images/font_0013.png"
                                 height="46" width="25" id="image_owr_5fm_gz"/><image
@@ -306,7 +306,7 @@
                         </entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0042.png" height="53" width="40"
                                 id="image_qwr_5fm_gz"/></entry>
                         <entry>&#xA757;&#x1DD3;<term> q mit einem Strich durch die Unterlänge und
@@ -323,7 +323,7 @@
                                 <text>hex:q&amp;#xA757;&amp;#x1DD3;</text></term></entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0032.png" height="58" width="31"
                                 id="image_rwr_5fm_gz"/><image href="images/font_0056.png"
                                 height="43" width="51" id="image_swr_5fm_gz"/><image
@@ -344,7 +344,7 @@
                                 format="pdf" scope="external">MUFI character recommendation (Version
                                 4.0; 22 Dezember 2015)</xref></entry>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0002.png" height="73" width="38"
                                 id="image_uwr_5fm_gz"/></entry>
                         <entry>q&#x0301;&#x037E;<term>q mit kombiniertem Akut und
@@ -360,7 +360,7 @@
                                 <text>hex:&amp;#xE8BF;&amp;#x037E;</text></term></entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0001.png" height="51" width="34"
                                 id="image_vwr_5fm_gz"/></entry>
                         <entry>q&#x0301;&#x037E;<term>q mit kombiniertem Akut und
@@ -375,7 +375,7 @@
                                 <text>hex:&amp;#xE8BF;&amp;#x037E;</text></term></entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0044.png" height="52" width="51"
                                 id="image_wwr_5fm_gz"/><image href="images/font_0031.png"
                                 height="52" width="35" id="image_xwr_5fm_gz"/></entry>
@@ -390,7 +390,7 @@
                                 <text>hex: &amp;#xE8BF;</text></term></entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0095.png" height="44" width="38"
                                 id="image_ywr_5fm_gz"/>
                         </entry>
@@ -399,7 +399,7 @@
                         <entry>q;</entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0096.png" height="44" width="32"
                                 id="image_zwr_5fm_gz"/></entry>
                         <entry>q&#x0300;;<term>q mit kombiniertem Gravis und im Abschluss Semikolon
@@ -413,7 +413,7 @@
                                 <text>hex: q&amp;#x0300;;</text></term></entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0122.png" height="48" width="24"
                                 id="image_axr_5fm_gz"/>
                         </entry>
@@ -428,7 +428,7 @@
                             <text>hex: q&amp;#x0301;</text></term></entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0105.png" height="50" width="37"
                                 id="image_bxr_5fm_gz"/></entry>
                         <entry>q&#x0301;;<term>q mit kombiniertem Akut und im Abschluss Semikolon
@@ -442,7 +442,7 @@
                                 <text>hex: q&amp;#x0301;;</text></term></entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/trFremdsprache_r.png"
                                 id="image_et5_mjm_gz"/></entry>
                         <entry>r</entry>
@@ -458,7 +458,7 @@
                         <entry>Sapor</entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0009.png" height="46" width="20"
                                 id="image_exr_5fm_gz"/>
                             <image href="images/font_0050.png" height="39" width="20"
@@ -471,7 +471,7 @@
                                 <text>hex:&amp;#xA75B;</text></term></entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0081.png" height="23" width="22"
                                 id="image_gxr_5fm_gz"/></entry>
                         <entry>r&#xA75B;<term>kleines r und rundes r <text>dezimal:
@@ -521,7 +521,7 @@
                             <text>hex: He&amp;#xA75B;ren</text></term></entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0116.png" height="59" width="20"
                                 id="image_kxr_5fm_gz"/><image href="images/font_0126.png"
                                 height="63" width="20" id="image_lxr_5fm_gz"/><image
@@ -617,7 +617,7 @@
                                 href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
                                 Makron</xref></entry>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0059.png" height="46" width="23"
                                 id="image_byr_5fm_gz"/><image href="images/font_0005.png"
                                 height="45" width="41" id="image_cyr_5fm_gz"/><image
@@ -637,7 +637,7 @@
                         </entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0091.png" height="31" width="27"
                                 id="image_eyr_5fm_gz"/></entry>
                         <entry>&#xA75F;<term>v mit diagonalem Strich <text>dezimal:
@@ -651,7 +651,7 @@
                                 <text>hex:&amp;#xA75F;</text></term></entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0022.png" height="47" width="23"
                                 id="image_fyr_5fm_gz"/></entry>
                         <entry>&#x03C8;<term>griechischer Kleinbuchstabe psi <text>dezimal:
@@ -668,7 +668,7 @@
                         </entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0084.png" height="42" width="28"
                                 id="image_gyr_5fm_gz"/></entry>
                         <entry>&#x03C9;<term>griechischer Kleinbuchstabe omega
@@ -791,7 +791,7 @@
                         <entry outputclass="description">Abkürzung für Zeichenkette <i>der</i> auch in einem Wort
                             möglich</entry>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0092.png" height="36" width="40"
                                 id="image_qyr_5fm_gz"/></entry>
                         <entry>&#x221E;<term>Zeichen für Unendlichkeit
@@ -805,23 +805,20 @@
                                 <text>hex: &amp;#x221E;</text></term></entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry>
                             <p dir="ltr"><image href="images/font_0113.png" height="55" width="22"
                                     id="image_ryr_5fm_gz"/></p>
                         </entry>
-                        <entry>
-                            &#x03C4;<term>griechischer Kleinbuchstabe tau
+                        <entry>&#x03C4;<term>griechischer Kleinbuchstabe tau
                                         <text>dezimal:&amp;#964;</text>
                                     <text>hex:&amp;#x03C4;</text></term>
                         </entry>
-                        <entry>
-                            &#x03C4;<term>griechischer Kleinbuchstabe tau
+                        <entry>&#x03C4;<term>griechischer Kleinbuchstabe tau
                                         <text>dezimal:&amp;#964;</text>
                                     <text>hex:&amp;#x03C4;</text></term>
                         </entry>
-                        <entry>
-                            &#x03C4;<term>griechischer Kleinbuchstabe tau
+                        <entry>&#x03C4;<term>griechischer Kleinbuchstabe tau
                                         <text>dezimal:&amp;#964;</text>
                                     <text>hex:&amp;#x03C4;</text></term>
                         </entry>
@@ -837,7 +834,7 @@
                                     termino. [Görlitz], 1635.</xref></p>
                         </entry>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0021.png" height="36" width="17"
                                 id="image_tyr_5fm_gz"/></entry>
                         <entry>&#x03DA;<term>griechischer Großbuchstabe stigma
@@ -859,7 +856,7 @@
                                     an der Oder, 1662.</xref></p>
                         </entry>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0068.png" height="36" width="34"
                                 id="image_vyr_5fm_gz"/></entry>
                         <entry>&#x03BF;&#x03C2;<term>Ligatur aus byzantinischer Zeit
