--- a/de/trans/trFremdsprache.dita
+++ b/de/trans/trFremdsprache.dita
@@ -65,7 +65,7 @@
                         <entry>&#x00E3;<term>a mit Tilde <text>dezimal: &amp;#227;</text>
                                 <text>hex: &amp;#x00E3;</text></term></entry>
                         <entry outputclass="description">
-                            <p>Im Level 1 wurde anhand des Kontext ermittelt, dass der Strich über
+                            <p id="Doppelung" importance="high" >Im Level 1 wurde anhand des Kontext ermittelt, dass der Strich über
                                 dem Vokal eine Verkürzung einer Doppelung des Vokals darstellt. Bei
                                 einem anderen Kontext kann die Schreibweise aus Level 2 angewendet
                                 werden.</p>
@@ -120,16 +120,14 @@
                                 <text>hex: &amp;#x0119;</text></term></entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0029.png" height="38" width="20"
                                 id="image_lvr_5fm_gz"/><image href="images/font_0015.png"
                                 height="40" width="20" id="image_mvr_5fm_gz"/><image
                                 href="images/font_0109.png" height="42" width="28"
                                 id="image_pvr_5fm_gz"/></entry>
                         <entry>
-                            <p dir="ltr">ee oder e&#x0304;<term>e mit kombiniertem Makron
-                                        <text>dezimal: e&amp;#772;</text>
-                                    <text>hex: e&amp;#x0304;</text></term></p>
+                            <p dir="ltr">ee</p>
                         </entry>
                         <entry>e&#x0304;<term>e mit kombiniertem Makron <text>dezimal:
                                     e&amp;#772;</text>
@@ -137,45 +135,50 @@
                         <entry> &#x0113;<term>e mit einem Makron <text>dezimal: &amp;#275;</text>
                                 <text>hex: &amp;#x0113;</text></term>
                         </entry>
-                        <entry outputclass="description">siehe Kommentar: <xref
-                                href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
-                                Makron</xref></entry>
+                        <entry outputclass="description">siehe Kommentar: <ul>
+                            <li><xref href="#topic_t5h_w2m_gz/Doppelung" format="dita"
+                                    />Doppelung</li>    
+                            <li><xref href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
+                                Makron</xref></li>
+                            </ul></entry>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry><image href="images/font_0018.png" height="44" width="23"
                                 id="image_nvr_5fm_gz"/><image href="images/font_0038.png"
                                 height="45" width="27" id="image_ovr_5fm_gz"/></entry>
-                        <entry>ee oder e&#x0303;<term>e mit kombinierter Tilde <text>dezimal:
-                                    e&amp;#771;</text>
-                                <text>hex: e&amp;#x0303;</text></term></entry>
+                        <entry>ee</entry>
                         <entry>e&#x0303;<term>e mit kombinierter Tilde <text>dezimal:
                                     e&amp;#771;</text>
                                 <text>hex: e&amp;#x0303;</text></term></entry>
                         <entry>e&#x0303;<term>e mit kombinierter Tilde <text>dezimal:
                                     e&amp;#771;</text>
                                 <text>hex: e&amp;#x0303;</text></term></entry>
-                        <entry outputclass="description">siehe Kommentar: <xref
-                                href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
-                                Makron</xref></entry>
+                        <entry outputclass="description">siehe Kommentar: <ul>
+                            <li><xref href="#topic_t5h_w2m_gz/Doppelung" format="dita"
+                            />Doppelung</li>    
+                            <li><xref href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
+                                Makron</xref></li>
+                        </ul></entry>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0101.png" height="32" width="24"
                                 id="image_rvr_5fm_gz"/><image href="images/font_0077.png"
                                 height="32" width="26" id="image_svr_5fm_gz"/><image
                                 href="images/font_0138.png" height="35" width="34"
                                 id="image_tvr_5fm_gz"/></entry>
-                        <entry>mm oder m&#x0303;<term>m mit kombinierter Tilde <text>dezimal:
-                                    m&amp;#771;</text>
-                                <text>hex:m&amp;#x0303;</text></term></entry>
+                        <entry>mm</entry>
                         <entry>m&#x0303;<term>m mit kombinierter Tilde <text>dezimal:
                                     m&amp;#771;</text>
                                 <text>hex: m&amp;#x0303;</text></term></entry>
                         <entry>m&#x0303;<term>m mit kombinierter Tilde <text>dezimal:
                                     m&amp;#771;</text>
                                 <text>hex: m&amp;#x0303;</text></term></entry>
-                        <entry outputclass="description">siehe Kommentar: <xref
-                                href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
-                                Makron</xref></entry>
+                        <entry outputclass="description">siehe Kommentar: <ul>
+                            <li><xref href="#topic_t5h_w2m_gz/Doppelung" format="dita"
+                            />Doppelung</li>    
+                            <li><xref href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
+                                Makron</xref></li>
+                        </ul></entry>
                     </row>
                     <row>
                         <entry dir="ltr"><image href="images/font_0067.png" height="27" width="39"
@@ -193,54 +196,53 @@
                         <entry>In</entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0036.png" height="37" width="26"
                                 id="image_wvr_5fm_gz"/><image href="images/font_0097.png"
                                 height="34" width="17" id="image_xvr_5fm_gz"/><image
                                 href="images/font_0102.png" height="37" width="23"
                                 id="image_yvr_5fm_gz"/></entry>
-                        <entry>nn oder n&#x0303;<term>n mit kombinierter Tilde <text>dezimal:
-                                    n&amp;#771;</text>
-                                <text>hex: n&amp;#x0303;</text></term></entry>
+                        <entry>nn</entry>
                         <entry>n&#x0303;<term>n mit kombinierter Tilde <text>dezimal:
                                     n&amp;#771;</text>
                                 <text>hex: n&amp;#x0303;</text></term></entry>
                         <entry>&#x00F1;<term>n mit kombinierter Tilde <text>dezimal:
                                     n&amp;#241;</text>
                                 <text>hex: n&amp;#x00F1;</text></term></entry>
-                        <entry outputclass="description">siehe Kommentar: <xref
-                                href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
-                                Makron</xref></entry>
+                        <entry outputclass="description">siehe Kommentar: <ul>
+                            <li><xref href="#topic_t5h_w2m_gz/Doppelung" format="dita"
+                            />Doppelung</li>    
+                            <li><xref href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
+                                Makron</xref></li>
+                        </ul></entry>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0053.png" height="47" width="31"
                                 id="image_zvr_5fm_gz"/><image href="images/font_0063.png"
                                 height="40" width="20" id="image_awr_5fm_gz"/><image
                                 href="images/font_0125.png" height="43" width="22"
                                 id="image_bwr_5fm_gz"/><image href="images/font_0060.png"
                                 height="40" width="23" id="image_cwr_5fm_gz"/></entry>
-                        <entry>oo oder o&#x0303;<term>o mit kombinierter Tilde <text>dezimal:
-                                    o&amp;#771;</text>
-                                <text>hex: o&amp;#x0303;</text></term></entry>
+                        <entry>oo</entry>
                         <entry>o&#x0303;<term>o mit kombinierter Tilde <text>dezimal:
                                     o&amp;#771;</text>
                                 <text>hex: o&amp;#x0303;</text></term></entry>
                         <entry>&#x00F5;<term>o mit Tilde <text>dezimal: &amp;#245;</text>
                                 <text>hex: &amp;#x00F5;</text></term></entry>
-                        <entry outputclass="description">siehe Kommentar: <xref
-                                href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
-                                Makron</xref></entry>
+                        <entry outputclass="description">siehe Kommentar: <ul>
+                            <li><xref href="#topic_t5h_w2m_gz/Doppelung" format="dita"
+                            />Doppelung</li>    
+                            <li><xref href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
+                                Makron</xref></li>
+                        </ul></entry>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0041.png" height="48" width="29"
                                 id="image_dwr_5fm_gz"/><image href="images/font_0137.png"
                                 height="49" width="27" id="image_ewr_5fm_gz"/><image
                                 href="images/font_0006.png" height="48" width="25"
                                 id="image_fwr_5fm_gz"/></entry>
-                        <entry> pp oder p&#x0303;<term>p mit kombinierter Tilde <text>dezimal:
-                                    p&amp;#771;</text>
-                                <text>hex: &amp;#x0303;</text></term>
-                        </entry>
+                        <entry>pp </entry>
                         <entry> p&#x0303;<term>p mit kombinierter Tilde <text>dezimal:
                                     p&amp;#771;</text>
                                 <text>hex: &amp;#x0303;</text></term>
@@ -249,9 +251,12 @@
                                     p&amp;#771;</text>
                                 <text>hex: &amp;#x0303;</text></term>
                         </entry>
-                        <entry outputclass="description">siehe Kommentar: <xref
-                                href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
-                                Makron</xref></entry>
+                        <entry outputclass="description">siehe Kommentar: <ul>
+                            <li><xref href="#topic_t5h_w2m_gz/Doppelung" format="dita"
+                            />Doppelung</li>    
+                            <li><xref href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
+                                Makron</xref></li>
+                        </ul></entry>
                     </row>
                     <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0043.png" height="54" width="26"
@@ -598,24 +603,25 @@
                         <entry>donat</entry>
                         <entry/>
                     </row>
-                    <row>
+                    <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0020.png" height="34" width="24"
                                 id="image_xxr_5fm_gz"/><image href="images/font_0128.png"
                                 height="46" width="28" id="image_yxr_5fm_gz"/><image
                                 href="images/font_0023.png" height="47" width="28"
                                 id="image_zxr_5fm_gz"/><image href="images/font_0014.png"
                                 height="46" width="26" id="image_ayr_5fm_gz"/></entry>
-                        <entry>uu oder u&#x0303;<term>u mit kombinierter Tilde <text>dezimal:
-                                    u&amp;#771;</text>
-                                <text>hex: u&amp;#x0303;</text></term></entry>
+                        <entry>uu</entry>
                         <entry>u&#x0303;<term>u mit kombinierter Tilde <text>dezimal:
                                     u&amp;#771;</text>
                                 <text>hex: u&amp;#x0303;</text></term></entry>
                         <entry>&#x0169;<term>u mit Tilde <text>dezimal: &amp;#361;</text>
                                 <text>hex: &amp;#x0169;</text></term></entry>
-                        <entry outputclass="description">siehe Kommentar: <xref
-                                href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
-                                Makron</xref></entry>
+                        <entry outputclass="description">siehe Kommentar: <ul>
+                            <li><xref href="#topic_t5h_w2m_gz/Doppelung" format="dita"
+                            />Doppelung</li>    
+                            <li><xref href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
+                                Makron</xref></li>
+                        </ul></entry>
                     </row>
                     <row product="ruleset">
                         <entry dir="ltr"><image href="images/font_0059.png" height="46" width="23"
