--- a/de/trans/trFremdsprache.dita
+++ b/de/trans/trFremdsprache.dita
@@ -137,7 +137,7 @@
                         </entry>
                         <entry outputclass="description">siehe Kommentar: <ul>
                             <li><xref href="#topic_t5h_w2m_gz/Doppelung" format="dita"
-                                    />Doppelung</li>    
+                                >Doppelung</xref></li>    
                             <li><xref href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
                                 Makron</xref></li>
                             </ul></entry>
@@ -155,7 +155,7 @@
                                 <text>hex: e&amp;#x0303;</text></term></entry>
                         <entry outputclass="description">siehe Kommentar: <ul>
                             <li><xref href="#topic_t5h_w2m_gz/Doppelung" format="dita"
-                            />Doppelung</li>    
+                                >Doppelung</xref></li>    
                             <li><xref href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
                                 Makron</xref></li>
                         </ul></entry>
@@ -175,7 +175,7 @@
                                 <text>hex: m&amp;#x0303;</text></term></entry>
                         <entry outputclass="description">siehe Kommentar: <ul>
                             <li><xref href="#topic_t5h_w2m_gz/Doppelung" format="dita"
-                            />Doppelung</li>    
+                                >Doppelung</xref></li>    
                             <li><xref href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
                                 Makron</xref></li>
                         </ul></entry>
@@ -211,7 +211,7 @@
                                 <text>hex: n&amp;#x00F1;</text></term></entry>
                         <entry outputclass="description">siehe Kommentar: <ul>
                             <li><xref href="#topic_t5h_w2m_gz/Doppelung" format="dita"
-                            />Doppelung</li>    
+                                >Doppelung</xref></li>    
                             <li><xref href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
                                 Makron</xref></li>
                         </ul></entry>
@@ -231,7 +231,7 @@
                                 <text>hex: &amp;#x00F5;</text></term></entry>
                         <entry outputclass="description">siehe Kommentar: <ul>
                             <li><xref href="#topic_t5h_w2m_gz/Doppelung" format="dita"
-                            />Doppelung</li>    
+                                >Doppelung</xref></li>    
                             <li><xref href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
                                 Makron</xref></li>
                         </ul></entry>
@@ -253,7 +253,7 @@
                         </entry>
                         <entry outputclass="description">siehe Kommentar: <ul>
                             <li><xref href="#topic_t5h_w2m_gz/Doppelung" format="dita"
-                            />Doppelung</li>    
+                                >Doppelung</xref></li>    
                             <li><xref href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
                                 Makron</xref></li>
                         </ul></entry>
@@ -618,7 +618,7 @@
                                 <text>hex: &amp;#x0169;</text></term></entry>
                         <entry outputclass="description">siehe Kommentar: <ul>
                             <li><xref href="#topic_t5h_w2m_gz/Doppelung" format="dita"
-                            />Doppelung</li>    
+                                >Doppelung</xref></li>    
                             <li><xref href="#topic_t5h_w2m_gz/Tilde_Makron" format="dita">Tilde,
                                 Makron</xref></li>
                         </ul></entry>
