--- a/de/trans/trFremdsprache.dita
+++ b/de/trans/trFremdsprache.dita
@@ -126,9 +126,7 @@
                                 height="40" width="20" id="image_mvr_5fm_gz"/><image
                                 href="images/font_0109.png" height="42" width="28"
                                 id="image_pvr_5fm_gz"/></entry>
-                        <entry>
-                            <p dir="ltr">ee</p>
-                        </entry>
+                        <entry>ee</entry>
                         <entry>e&#x0304;<term>e mit kombiniertem Makron <text>dezimal:
                                     e&amp;#772;</text>
                                 <text>hex: e&amp;#x0304;</text></term></entry>
@@ -266,13 +264,13 @@
                                 id="image_iwr_5fm_gz"/><image href="images/font_0048.png"
                                 height="49" width="29" id="image_jwr_5fm_gz"/>
                         </entry>
-                        <entry> &#x1D71;<term>p mit mittlerer Tilde <text>dezimal:
+                        <entry>&#x1D71;<term>p mit mittlerer Tilde <text>dezimal:
                                     &amp;#7537;</text>
                                 <text>hex: &amp;#x1D71</text></term></entry>
-                        <entry> &#x1D71;<term>p mit mittlerer Tilde <text>dezimal:
+                        <entry>&#x1D71;<term>p mit mittlerer Tilde <text>dezimal:
                                     &amp;#7537;</text>
                                 <text>hex: &amp;#x1D71</text></term></entry>
-                        <entry> &#x1D71;<term>p mit mittlerer Tilde <text>dezimal:
+                        <entry>&#x1D71;<term>p mit mittlerer Tilde <text>dezimal:
                                     &amp;#7537;</text>
                                 <text>hex: &amp;#x1D71</text></term></entry>
                         <entry/>
