--- a/de/trans/trLigaturen2.dita
+++ b/de/trans/trLigaturen2.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
-<topic id="unbenannt2">
+<topic id="Ligaturen">
   <title>Ligaturen</title>
   <body>
     <p>
@@ -27,7 +27,9 @@
               <entry>&#x00C6;<term><text>hex: &amp;#x00C6;</text></term></entry>
               <entry>&#x00C6;<term><text>hex: &amp;#x00C6;</text></term></entry>
               <entry>&#x00C6;<term><text>hex: &amp;#x00C6;</text></term></entry>
-              <entry/>
+              <entry><p id="vLigatur">Vokalische Ligaturen werden grundsätzlich in allen Level als spezifischer Unicode
+                  realisiert.</p></entry>
+              
             </row>
             <row>
               <entry dir="ltr"><image href="images/font_0010.png" height="27" width="20"
@@ -38,7 +40,8 @@
               <entry>&#x00E6;<term><text>hex: &amp;#x00E6;</text></term></entry>
               <entry>&#x00E6;<term><text>hex: &amp;#x00E6;</text></term></entry>
               <entry>&#x00E6;<term><text>hex: &amp;#x00E6;</text></term></entry>
-              <entry/>
+              <entry>siehe: <xref href="#Ligaturen/vLigatur" format="dita">vokalische
+                Ligatur</xref></entry>
             </row>
             <row>
               <entry/>
@@ -129,7 +132,8 @@
               <entry>&#x0152;<term><text>hex: &amp;#x0152;</text></term></entry>
               <entry>&#x0152;<term><text>hex: &amp;#x0152;</text></term></entry>
               <entry>&#x0152;<term><text>hex: &amp;#x0152;</text></term></entry>
-              <entry/>
+              <entry>siehe: <xref href="#Ligaturen/vLigatur" format="dita">vokalische
+                Ligatur</xref></entry>
             </row>
             <row>
               <entry dir="ltr"><image href="images/font_0117.png" height="20" width="22"
@@ -138,7 +142,8 @@
               <entry>&#x0153;<term><text>hex: &amp;#x0153;</text></term></entry>
               <entry>&#x0153;<term><text>hex: &amp;#x0153;</text></term></entry>
               <entry>&#x0153;<term><text>hex: &amp;#x0153;</text></term></entry>
-              <entry/>
+              <entry>siehe: <xref href="#Ligaturen/vLigatur" format="dita">vokalische
+                Ligatur</xref></entry>
             </row>
             <row>
               <entry dir="ltr"><image href="images/font_0004.png" height="40" width="20"
