--- a/de/trans/trLigaturen2.dita
+++ b/de/trans/trLigaturen2.dita
@@ -81,8 +81,8 @@
               <entry>&#xEEC5;<term><text>hex: &amp;#xEEC5;</text></term></entry>
               <entry outputclass="description">siehe <xref
                   href="https://folk.uib.no/hnooh/mufi/specs/MUFI-Alphabetic-4-0.pdf#page=81"
-                  format="pdf" scope="external">MUFI character recommendation (Version 4.0; 22
-                  Dezember 2015)</xref></entry>
+                  format="pdf" scope="external"><text>MUFI character recommendation (Version 4.0; 22
+                    Dezember 2015)</text></xref></entry>
             </row>
             <row product="ruleset">
               <entry/>
@@ -226,6 +226,14 @@
                   format="pdf" scope="external">MUFI character recommendation (Version 4.0; 22
                   Dezember 2015)</xref></entry>
             </row>
+          <row>
+            <entry/>
+            <entry>ᵫ<term><text>hex: &amp;#x1D6B;</text></term></entry>
+            <entry>ᵫ<term><text>hex: &amp;#x1D6B;</text></term></entry>
+            <entry>ᵫ<term><text>hex: &amp;#x1D6B;</text></term></entry>
+            <entry>siehe: <xref href="#Ligaturen/vLigatur" format="dita">vokalische
+              Ligatur</xref></entry>
+          </row>
             <row product="ruleset">
               <entry dir="ltr"><image href="images/font_0080.png" height="24" width="29"
                   id="image_hv3_3gm_gz"/></entry>
