--- a/de/trans/trLigaturen2.dita
+++ b/de/trans/trLigaturen2.dita
@@ -14,9 +14,9 @@
           <thead>
             <row>
               <entry dir="ltr"/>
-              <entry><b>Level 1</b></entry>
-              <entry><b>Level 2</b></entry>
-              <entry><b>Level 3</b></entry>
+              <entry><b><xref href="tr_level_1.dita">Level 1</xref></b></entry>
+              <entry><b><xref href="tr_level_2.dita">Level 2</xref></b></entry>
+              <entry><b><xref href="tr_level_3.dita">Level 3</xref></b></entry>
               <entry><b>Kommentar</b></entry>
             </row>
           </thead>
@@ -81,8 +81,8 @@
               <entry>&#xEEC5;<term><text>hex: &amp;#xEEC5;</text></term></entry>
               <entry outputclass="description">siehe <xref
                   href="https://folk.uib.no/hnooh/mufi/specs/MUFI-Alphabetic-4-0.pdf#page=81"
-                  format="pdf" scope="external"><text>MUFI character recommendation (Version 4.0; 22
-                    Dezember 2015)</text></xref></entry>
+                  format="pdf" scope="external">MUFI character recommendation (Version 4.0; 22
+                    Dezember 2015)</xref></entry>
             </row>
             <row product="ruleset">
               <entry/>
