--- a/de/trans/trLigaturen2.dita
+++ b/de/trans/trLigaturen2.dita
@@ -82,7 +82,7 @@
               <entry outputclass="description">siehe <xref
                   href="https://folk.uib.no/hnooh/mufi/specs/MUFI-Alphabetic-4-0.pdf#page=81"
                   format="pdf" scope="external"><desc>MUFI character recommendation (Version 4.0; 22
-                    Dezember 2015)</desc></xref></entry>
+                    Dezember 2015)</desc>Test</xref></entry>
             </row>
             <row product="ruleset">
               <entry/>
