--- a/de/trans/trLigaturen2.dita
+++ b/de/trans/trLigaturen2.dita
@@ -81,8 +81,8 @@
               <entry>&#xEEC5;<term><text>hex: &amp;#xEEC5;</text></term></entry>
               <entry outputclass="description">siehe <xref
                   href="https://folk.uib.no/hnooh/mufi/specs/MUFI-Alphabetic-4-0.pdf#page=81"
-                  format="pdf" scope="external"><b>MUFI character recommendation (Version 4.0; 22
-                    Dezember 2015)</b></xref></entry>
+                  format="pdf" scope="external">MUFI character recommendation (Version 4.0; 22
+                    Dezember 2015)</xref></entry>
             </row>
             <row product="ruleset">
               <entry/>
