add images to own dir and correction trlevels.dita

--- a/de/trans/trLevels.dita
+++ b/de/trans/trLevels.dita
@@ -121,7 +121,7 @@
         </div>
         <div id="section_fpl_k2t_mqb">
             <p><b>Problemfall Makron über dem Zeichen</b></p>
-            <p><image href="https://i.imgur.com/75pJer2.png" id="image_gpl_k2t_mqb"/></p>
+            <p><image href="images/75pJer2.png" id="image_gpl_k2t_mqb"/></p>
             <p>Transkription:</p>
             <p><codeph>vnderlaſſen/ vñ fuͤrnemlich</codeph> = Level 2</p>
             <p>allgemeine Regel: Level 3: ñ, Level 2 ñ, Level 1 nn (Beachten Sie immer den
@@ -138,12 +138,12 @@
         <div id="section_hpl_k2t_mqb">
             <p><b>Problemfall Normalisierung von
                 Transkriptionen/Text</b></p>
-            <p><image href="https://i.imgur.com/zuzTSEK.png" id="image_ipl_k2t_mqb"/></p>
+            <p><image href="images/zuzTSEK.png" id="image_ipl_k2t_mqb"/></p>
             <ul id="ul_jpl_k2t_mqb">
                 <li><codeph>ihren Haaren seine Füße,</codeph> = mögliches Level 1</li>
                 <li><codeph>yhren harẽ ſeyne fuſſe/</codeph> = Level 2</li>
             </ul>
-            <p><image href="https://i.imgur.com/0SgtVhU.png" id="image_kpl_k2t_mqb"/></p>
+            <p><image href="images/0SgtVhU.png" id="image_kpl_k2t_mqb"/></p>
             <ul id="ul_lpl_k2t_mqb">
                 <li><codeph>doch soll der Vischer solch(es) Haar</codeph> = mögliches Level 1</li>
                 <li><codeph>doch soll der Vischer sollich haar</codeph> = Level 1</li>
@@ -159,7 +159,7 @@
             <p><b>Zusatz:</b></p>
             <p>Bei der Nutzung von Editionen ist ebenfalls die Normalisierung zu beachten. Dies
                 zeigt dieses Beispiel deutlich.</p>
-            <p><image href="https://i.imgur.com/1Q7koaO.png" id="image_mpl_k2t_mqb"/></p>
+            <p><image href="images/1Q7koaO.png" id="image_mpl_k2t_mqb"/></p>
             <p>Quelle: Sammlung der württembergischen Regierungs-Gesetze / 3: Enthaltend den dritten
                 Theil der Samml. der Regierungs-Gesetze : … Regierungs-Gesetze vom Jahre 1727 bis
                 zum Jahre 1805 ( Th. 1, 1489 - 1634, Band 12) [<xref
