add exampleBoxes css and correction the div

--- a/de/trans/trLevels.dita
+++ b/de/trans/trLevels.dita
@@ -166,8 +166,9 @@
                     href="http://opacplus.bsb-muenchen.de/title/BV006590720/ft/bsb10552294?page=702"
                     format="html" scope="external"
                     >http://opacplus.bsb-muenchen.de/title/BV006590720/ft/bsb10552294?page=702</xref>]
-                abgerufen am 05.08.2021.</p>
-            <ul id="ol_npl_k2t_mqb">
+                abgerufen am 05.08.2021.</p></div></sectiondiv>
+            <div>
+                <ul id="ol_npl_k2t_mqb">
                 <li>
                     <p>Es gibt demnach nur eine eingeschränkte Kompatibilität zwischen den Texten im
                         Level 1, 2 und 3. In den meisten Fällen ist nur in absteigender Richtung
@@ -189,7 +190,7 @@
                     <p>OCR-D empfiehlt für die GT-Erstellung/Transkription Level 2.</p>
                 </li>
             </ul>
-        </div></sectiondiv></section>
+        </div></section>
         
     </body>
 </topic>
