--- a/de/trans/transkription.dita
+++ b/de/trans/transkription.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="transkription">
-  <title>Richtlinien zur Transkription für Ground Truth</title>
+  <title>📑 Richtlinien zur Transkription für Ground Truth</title>
   <titlealts><navtitle>Transkription</navtitle></titlealts>
     <abstract>
 <shortdesc>Richtlinien zur Transkription der Volltexte für die Nutzung als Ground Truth</shortdesc>
