--- a/de/trans/trLevels.dita
+++ b/de/trans/trLevels.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="trLevels">
-    <title>Ausführliche Zusammenfassung : Erklärungen zu den Level</title>
+    <title>📢 Ausführliche Zusammenfassung : Erklärungen zu den Level</title>
     <body>
          <section id="section_v4l_k2t_mqb">
             <title>Allgemeine Erklärung zu den GT-Level</title>
