--- a/de/trans/layout.dita
+++ b/de/trans/layout.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="layout">
-    <title>Layout und Struktur</title>
+    <title>📖 Layout und Struktur</title>
 <titlealts><navtitle>Layout und Struktur</navtitle></titlealts>
 <abstract>
 <shortdesc>Richtlinien zur Erfassung des Layouts und der Struktur von gedruckten Texten für die
