--- a/de/trans/trPage.dita
+++ b/de/trans/trPage.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="trPage">
-    <title>Dokumentation zum PAGE XML Format for Page Content</title>
+    <title>📓 Dokumentation zum PAGE XML Format for Page Content</title>
 <abstract><shortdesc>Die automatisch erstellte Dokumentation gibt einen Überblick über alle Bestandteile des Schemas.</shortdesc></abstract><body>
 <p>Die Dokumentation des PAGE XML Schema wurde automatisch erzeugt. Dafür wurde das vom
 PrimaLab bereitgestellte Schema und das automatische Schema-Dokumentations-Werkzeug des
